// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstructorStudentActivityLogsComponent should snap when page is still loading 1`] = `
<tm-instructor-student-activity-logs
  LOGS_DATE_TIME_FORMAT={[Function String]}
  LOGS_RETENTION_PERIOD={[Function Number]}
  LOG_TYPES={[Function Array]}
  SortBy={[Function Object]}
  __ngContext__={[Function Number]}
  course={[Function Object]}
  courseService={[Function CourseService]}
  dateToday={[Function Object]}
  earliestSearchDate={[Function Object]}
  feedbackSessions={[Function Map]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  formModel={[Function Object]}
  isLoading={[Function Boolean]}
  isSearching="false"
  logsService={[Function LogService]}
  route={[Function ActivatedRoute]}
  searchResults={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  studentToLog={[Function Object]}
  students={[Function Array]}
  timezoneService={[Function TimezoneService]}
>
  <h1>
    Student Activity Logs For 
  </h1><p>
    This page allows you to find when your students have accessed or submitted a particular feedback session or view a session results. Note that you can only view student logs if you have 
    <b>
      owner or manager privileges
    </b>
     for the course. The earliest date you can search for is 
    <b>
      30 days
    </b>
     before today.
  </p><hr /><tm-loading-spinner>
    <div
      class="loading-container"
    >
      <div
        class="row spinner-border text-primary"
        role="status"
      />
      <div
        class="row text-secondary"
      >
        Loading...
      </div>
    </div>
  </tm-loading-spinner><div
    id="logs-output"
  >
    <div>
    </div>
  </div>
</tm-instructor-student-activity-logs>
`;

exports[`InstructorStudentActivityLogsComponent should snap when searching for details in search form 1`] = `
<tm-instructor-student-activity-logs
  LOGS_DATE_TIME_FORMAT={[Function String]}
  LOGS_RETENTION_PERIOD={[Function Number]}
  LOG_TYPES={[Function Array]}
  SortBy={[Function Object]}
  __ngContext__={[Function Number]}
  course={[Function Object]}
  courseService={[Function CourseService]}
  dateToday={[Function Object]}
  earliestSearchDate={[Function Object]}
  feedbackSessions={[Function Map]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  formModel={[Function Object]}
  isLoading="false"
  isSearching={[Function Boolean]}
  logsService={[Function LogService]}
  route={[Function ActivatedRoute]}
  searchResults={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  studentToLog={[Function Object]}
  students={[Function Array]}
  timezoneService={[Function TimezoneService]}
>
  <h1>
    Student Activity Logs For CS9999
  </h1><p>
    This page allows you to find when your students have accessed or submitted a particular feedback session or view a session results. Note that you can only view student logs if you have 
    <b>
      owner or manager privileges
    </b>
     for the course. The earliest date you can search for is 
    <b>
      30 days
    </b>
     before today.
  </p><hr /><div
    class="card bg-form no-border"
  >
    <div
      class="card-body"
    >
      <div
        class="row form-group"
      >
        <div
          class="col-4"
        >
          <div
            class="col-12"
          >
            <label
              class="fw-bold"
              for="activity-type-dropdown"
            >
              Activity Type
            </label>
          </div>
          <div
            class="col-12"
          >
            <select
              class="form-control form-select col-12 ng-untouched ng-pristine ng-valid"
              id="activity-type-dropdown"
            >
              <option
                disabled=""
                hidden=""
                selected=""
                value=""
              >
                Select Activity Type
              </option>
              <option
                value="access"
              >
                 session access 
              </option>
              <option
                value="submission"
              >
                 session submission 
              </option>
              <option
                value="access,submission"
              >
                 session access and submission 
              </option>
              <option
                value="view result"
              >
                 view session results 
              </option>
            </select>
          </div>
        </div>
        <div
          class="col-8"
        >
          <div
            class="col-12 mb-1"
          >
            <label
              class="fw-bold"
            >
              Search period from
            </label>
          </div>
          <div
            class="input-group"
          >
            <div
              class="col-md-6 input-group"
              id="logs-from-datepicker"
            >
              <input
                aria-label="Date to search from"
                class="form-control ng-untouched ng-pristine ng-valid"
                ngbdatepicker=""
                readonly=""
                type="text"
              />
              <button
                aria-label="Change date"
                class="btn btn-light"
                type="button"
              >
                <i
                  class="fas fa-calendar-alt"
                />
              </button>
            </div>
            <div
              class="col-md-3"
            >
              <tm-timepicker
                id="logs-from-timepicker"
              >
                <select
                  aria-label="Select time"
                  class="form-control form-select ng-untouched ng-pristine ng-valid"
                >
                  <option
                    value="1: Object"
                  >
                     01:00H 
                  </option>
                  <option
                    value="2: Object"
                  >
                     02:00H 
                  </option>
                  <option
                    value="3: Object"
                  >
                     03:00H 
                  </option>
                  <option
                    value="4: Object"
                  >
                     04:00H 
                  </option>
                  <option
                    value="5: Object"
                  >
                     05:00H 
                  </option>
                  <option
                    value="6: Object"
                  >
                     06:00H 
                  </option>
                  <option
                    value="7: Object"
                  >
                     07:00H 
                  </option>
                  <option
                    value="8: Object"
                  >
                     08:00H 
                  </option>
                  <option
                    value="9: Object"
                  >
                     09:00H 
                  </option>
                  <option
                    value="10: Object"
                  >
                     10:00H 
                  </option>
                  <option
                    value="11: Object"
                  >
                     11:00H 
                  </option>
                  <option
                    value="12: Object"
                  >
                     12:00H 
                  </option>
                  <option
                    value="13: Object"
                  >
                     13:00H 
                  </option>
                  <option
                    value="14: Object"
                  >
                     14:00H 
                  </option>
                  <option
                    value="15: Object"
                  >
                     15:00H 
                  </option>
                  <option
                    value="16: Object"
                  >
                     16:00H 
                  </option>
                  <option
                    value="17: Object"
                  >
                     17:00H 
                  </option>
                  <option
                    value="18: Object"
                  >
                     18:00H 
                  </option>
                  <option
                    value="19: Object"
                  >
                     19:00H 
                  </option>
                  <option
                    value="20: Object"
                  >
                     20:00H 
                  </option>
                  <option
                    value="21: Object"
                  >
                     21:00H 
                  </option>
                  <option
                    value="22: Object"
                  >
                     22:00H 
                  </option>
                  <option
                    value="23: Object"
                  >
                     23:00H 
                  </option>
                  <option
                    value="0: Object"
                  >
                    23:59H
                  </option>
                </select>
              </tm-timepicker>
            </div>
          </div>
        </div>
      </div>
      <div
        class="row form-group"
      >
        <div
          class="col-4"
        >
          <div
            class="col-12"
          >
            <label
              class="fw-bold"
              for="student-name-dropdown"
            >
              Student Name (Optional)
            </label>
          </div>
          <div
            class="col-12"
          >
            <select
              class="form-control form-select col-12 ng-untouched ng-pristine ng-valid"
              id="student-name-dropdown"
            >
              <option
                value="doejohn@email.com"
              >
                 Doe John &lt;doejohn@email.com&gt; 
              </option>
            </select>
          </div>
        </div>
        <div
          class="col-8"
        >
          <div
            class="col-12 mb-1"
          >
            <label
              class="fw-bold"
              for="logs-to-datepicker"
            >
              Search period until
            </label>
          </div>
          <div
            class="input-group"
          >
            <div
              class="col-md-6 input-group"
              id="logs-to-datepicker"
            >
              <input
                aria-label="Date to search until"
                class="form-control ng-untouched ng-pristine ng-valid"
                ngbdatepicker=""
                readonly=""
                type="text"
              />
              <button
                aria-label="Change date"
                class="btn btn-light"
                type="button"
              >
                <i
                  class="fas fa-calendar-alt"
                />
              </button>
            </div>
            <div
              class="col-md-3"
            >
              <tm-timepicker
                aria-label="Search period until time"
                id="logs-to-timepicker"
              >
                <select
                  aria-label="Select time"
                  class="form-control form-select ng-untouched ng-pristine ng-valid"
                >
                  <option
                    value="1: Object"
                  >
                     01:00H 
                  </option>
                  <option
                    value="2: Object"
                  >
                     02:00H 
                  </option>
                  <option
                    value="3: Object"
                  >
                     03:00H 
                  </option>
                  <option
                    value="4: Object"
                  >
                     04:00H 
                  </option>
                  <option
                    value="5: Object"
                  >
                     05:00H 
                  </option>
                  <option
                    value="6: Object"
                  >
                     06:00H 
                  </option>
                  <option
                    value="7: Object"
                  >
                     07:00H 
                  </option>
                  <option
                    value="8: Object"
                  >
                     08:00H 
                  </option>
                  <option
                    value="9: Object"
                  >
                     09:00H 
                  </option>
                  <option
                    value="10: Object"
                  >
                     10:00H 
                  </option>
                  <option
                    value="11: Object"
                  >
                     11:00H 
                  </option>
                  <option
                    value="12: Object"
                  >
                     12:00H 
                  </option>
                  <option
                    value="13: Object"
                  >
                     13:00H 
                  </option>
                  <option
                    value="14: Object"
                  >
                     14:00H 
                  </option>
                  <option
                    value="15: Object"
                  >
                     15:00H 
                  </option>
                  <option
                    value="16: Object"
                  >
                     16:00H 
                  </option>
                  <option
                    value="17: Object"
                  >
                     17:00H 
                  </option>
                  <option
                    value="18: Object"
                  >
                     18:00H 
                  </option>
                  <option
                    value="19: Object"
                  >
                     19:00H 
                  </option>
                  <option
                    value="20: Object"
                  >
                     20:00H 
                  </option>
                  <option
                    value="21: Object"
                  >
                     21:00H 
                  </option>
                  <option
                    value="22: Object"
                  >
                     22:00H 
                  </option>
                  <option
                    value="23: Object"
                  >
                     23:00H 
                  </option>
                  <option
                    value="0: Object"
                  >
                    23:59H
                  </option>
                </select>
              </tm-timepicker>
            </div>
            <div
              class="col-md-2"
            >
              <button
                class="float-end btn btn-primary"
                disabled=""
                id="search-button"
              >
                Search
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="row form-group"
      >
        <div
          class="col-5"
        >
          <div
            class="col-12"
          >
            <label
              class="fw-bold"
              for="session-dropdown"
            >
              Feedback Session Name (Optional)
            </label>
          </div>
          <div
            class="col-12"
          >
            <select
              class="form-control form-select col-md-12 ng-untouched ng-pristine ng-valid"
              id="session-dropdown"
            >
              <option
                value=""
              />
            </select>
          </div>
        </div>
        <div
          class="row mt-md-1 ms-md-3"
        >
          <div
            class="col-12 form-check"
            style="margin-top: 30px;"
          >
            <label
              class="form-check-label"
            >
              <input
                class="form-check-input"
                id="show-actions"
                name="showActions"
                type="checkbox"
              />
               Show actions 
            </label>
            <label
              class="form-check-label"
              style="margin-left: 40px;"
            >
              <input
                class="form-check-input"
                id="show-inactions"
                name="showInactions"
                type="checkbox"
              />
               Show inactions 
            </label>
          </div>
        </div>
      </div>
    </div>
  </div><div
    id="logs-output"
  >
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
  </div>
</tm-instructor-student-activity-logs>
`;

exports[`InstructorStudentActivityLogsComponent should snap with default fields 1`] = `
<tm-instructor-student-activity-logs
  LOGS_DATE_TIME_FORMAT={[Function String]}
  LOGS_RETENTION_PERIOD={[Function Number]}
  LOG_TYPES={[Function Array]}
  SortBy={[Function Object]}
  __ngContext__={[Function Number]}
  course={[Function Object]}
  courseService={[Function CourseService]}
  dateToday={[Function Object]}
  earliestSearchDate={[Function Object]}
  feedbackSessions={[Function Map]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  formModel={[Function Object]}
  isLoading={[Function Boolean]}
  isSearching="false"
  logsService={[Function LogService]}
  route={[Function ActivatedRoute]}
  searchResults={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  studentToLog={[Function Object]}
  students={[Function Array]}
  timezoneService={[Function TimezoneService]}
>
  <h1>
    Student Activity Logs For 
  </h1><p>
    This page allows you to find when your students have accessed or submitted a particular feedback session or view a session results. Note that you can only view student logs if you have 
    <b>
      owner or manager privileges
    </b>
     for the course. The earliest date you can search for is 
    <b>
      30 days
    </b>
     before today.
  </p><hr /><tm-loading-spinner>
    <div
      class="loading-container"
    >
      <div
        class="row spinner-border text-primary"
        role="status"
      />
      <div
        class="row text-secondary"
      >
        Loading...
      </div>
    </div>
  </tm-loading-spinner><div
    id="logs-output"
  >
    <div>
    </div>
  </div>
</tm-instructor-student-activity-logs>
`;

exports[`InstructorStudentActivityLogsComponent should snap with results of a search 1`] = `
<tm-instructor-student-activity-logs
  LOGS_DATE_TIME_FORMAT={[Function String]}
  LOGS_RETENTION_PERIOD={[Function Number]}
  LOG_TYPES={[Function Array]}
  SortBy={[Function Object]}
  __ngContext__={[Function Number]}
  course={[Function Object]}
  courseService={[Function CourseService]}
  dateToday={[Function Object]}
  earliestSearchDate={[Function Object]}
  feedbackSessions={[Function Map]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  formModel={[Function Object]}
  isLoading="false"
  isSearching="false"
  logsService={[Function LogService]}
  route={[Function ActivatedRoute]}
  searchResults={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  studentToLog={[Function Object]}
  students={[Function Array]}
  timezoneService={[Function TimezoneService]}
>
  <h1>
    Student Activity Logs For 
  </h1><p>
    This page allows you to find when your students have accessed or submitted a particular feedback session or view a session results. Note that you can only view student logs if you have 
    <b>
      owner or manager privileges
    </b>
     for the course. The earliest date you can search for is 
    <b>
      30 days
    </b>
     before today.
  </p><hr /><div
    class="card bg-form no-border"
  >
    <div
      class="card-body"
    >
      <div
        class="row form-group"
      >
        <div
          class="col-4"
        >
          <div
            class="col-12"
          >
            <label
              class="fw-bold"
              for="activity-type-dropdown"
            >
              Activity Type
            </label>
          </div>
          <div
            class="col-12"
          >
            <select
              class="form-control form-select col-12 ng-untouched ng-pristine ng-valid"
              id="activity-type-dropdown"
            >
              <option
                disabled=""
                hidden=""
                selected=""
                value=""
              >
                Select Activity Type
              </option>
              <option
                value="access"
              >
                 session access 
              </option>
              <option
                value="submission"
              >
                 session submission 
              </option>
              <option
                value="access,submission"
              >
                 session access and submission 
              </option>
              <option
                value="view result"
              >
                 view session results 
              </option>
            </select>
          </div>
        </div>
        <div
          class="col-8"
        >
          <div
            class="col-12 mb-1"
          >
            <label
              class="fw-bold"
            >
              Search period from
            </label>
          </div>
          <div
            class="input-group"
          >
            <div
              class="col-md-6 input-group"
              id="logs-from-datepicker"
            >
              <input
                aria-label="Date to search from"
                class="form-control ng-untouched ng-pristine ng-valid"
                ngbdatepicker=""
                readonly=""
                type="text"
              />
              <button
                aria-label="Change date"
                class="btn btn-light"
                type="button"
              >
                <i
                  class="fas fa-calendar-alt"
                />
              </button>
            </div>
            <div
              class="col-md-3"
            >
              <tm-timepicker
                id="logs-from-timepicker"
              >
                <select
                  aria-label="Select time"
                  class="form-control form-select ng-untouched ng-pristine ng-valid"
                >
                  <option
                    value="1: Object"
                  >
                     01:00H 
                  </option>
                  <option
                    value="2: Object"
                  >
                     02:00H 
                  </option>
                  <option
                    value="3: Object"
                  >
                     03:00H 
                  </option>
                  <option
                    value="4: Object"
                  >
                     04:00H 
                  </option>
                  <option
                    value="5: Object"
                  >
                     05:00H 
                  </option>
                  <option
                    value="6: Object"
                  >
                     06:00H 
                  </option>
                  <option
                    value="7: Object"
                  >
                     07:00H 
                  </option>
                  <option
                    value="8: Object"
                  >
                     08:00H 
                  </option>
                  <option
                    value="9: Object"
                  >
                     09:00H 
                  </option>
                  <option
                    value="10: Object"
                  >
                     10:00H 
                  </option>
                  <option
                    value="11: Object"
                  >
                     11:00H 
                  </option>
                  <option
                    value="12: Object"
                  >
                     12:00H 
                  </option>
                  <option
                    value="13: Object"
                  >
                     13:00H 
                  </option>
                  <option
                    value="14: Object"
                  >
                     14:00H 
                  </option>
                  <option
                    value="15: Object"
                  >
                     15:00H 
                  </option>
                  <option
                    value="16: Object"
                  >
                     16:00H 
                  </option>
                  <option
                    value="17: Object"
                  >
                     17:00H 
                  </option>
                  <option
                    value="18: Object"
                  >
                     18:00H 
                  </option>
                  <option
                    value="19: Object"
                  >
                     19:00H 
                  </option>
                  <option
                    value="20: Object"
                  >
                     20:00H 
                  </option>
                  <option
                    value="21: Object"
                  >
                     21:00H 
                  </option>
                  <option
                    value="22: Object"
                  >
                     22:00H 
                  </option>
                  <option
                    value="23: Object"
                  >
                     23:00H 
                  </option>
                  <option
                    value="0: Object"
                  >
                    23:59H
                  </option>
                </select>
              </tm-timepicker>
            </div>
          </div>
        </div>
      </div>
      <div
        class="row form-group"
      >
        <div
          class="col-4"
        >
          <div
            class="col-12"
          >
            <label
              class="fw-bold"
              for="student-name-dropdown"
            >
              Student Name (Optional)
            </label>
          </div>
          <div
            class="col-12"
          >
            <select
              class="form-control form-select col-12 ng-untouched ng-pristine ng-valid"
              id="student-name-dropdown"
            >
            </select>
          </div>
        </div>
        <div
          class="col-8"
        >
          <div
            class="col-12 mb-1"
          >
            <label
              class="fw-bold"
              for="logs-to-datepicker"
            >
              Search period until
            </label>
          </div>
          <div
            class="input-group"
          >
            <div
              class="col-md-6 input-group"
              id="logs-to-datepicker"
            >
              <input
                aria-label="Date to search until"
                class="form-control ng-untouched ng-pristine ng-valid"
                ngbdatepicker=""
                readonly=""
                type="text"
              />
              <button
                aria-label="Change date"
                class="btn btn-light"
                type="button"
              >
                <i
                  class="fas fa-calendar-alt"
                />
              </button>
            </div>
            <div
              class="col-md-3"
            >
              <tm-timepicker
                aria-label="Search period until time"
                id="logs-to-timepicker"
              >
                <select
                  aria-label="Select time"
                  class="form-control form-select ng-untouched ng-pristine ng-valid"
                >
                  <option
                    value="1: Object"
                  >
                     01:00H 
                  </option>
                  <option
                    value="2: Object"
                  >
                     02:00H 
                  </option>
                  <option
                    value="3: Object"
                  >
                     03:00H 
                  </option>
                  <option
                    value="4: Object"
                  >
                     04:00H 
                  </option>
                  <option
                    value="5: Object"
                  >
                     05:00H 
                  </option>
                  <option
                    value="6: Object"
                  >
                     06:00H 
                  </option>
                  <option
                    value="7: Object"
                  >
                     07:00H 
                  </option>
                  <option
                    value="8: Object"
                  >
                     08:00H 
                  </option>
                  <option
                    value="9: Object"
                  >
                     09:00H 
                  </option>
                  <option
                    value="10: Object"
                  >
                     10:00H 
                  </option>
                  <option
                    value="11: Object"
                  >
                     11:00H 
                  </option>
                  <option
                    value="12: Object"
                  >
                     12:00H 
                  </option>
                  <option
                    value="13: Object"
                  >
                     13:00H 
                  </option>
                  <option
                    value="14: Object"
                  >
                     14:00H 
                  </option>
                  <option
                    value="15: Object"
                  >
                     15:00H 
                  </option>
                  <option
                    value="16: Object"
                  >
                     16:00H 
                  </option>
                  <option
                    value="17: Object"
                  >
                     17:00H 
                  </option>
                  <option
                    value="18: Object"
                  >
                     18:00H 
                  </option>
                  <option
                    value="19: Object"
                  >
                     19:00H 
                  </option>
                  <option
                    value="20: Object"
                  >
                     20:00H 
                  </option>
                  <option
                    value="21: Object"
                  >
                     21:00H 
                  </option>
                  <option
                    value="22: Object"
                  >
                     22:00H 
                  </option>
                  <option
                    value="23: Object"
                  >
                     23:00H 
                  </option>
                  <option
                    value="0: Object"
                  >
                    23:59H
                  </option>
                </select>
              </tm-timepicker>
            </div>
            <div
              class="col-md-2"
            >
              <button
                class="float-end btn btn-primary"
                disabled=""
                id="search-button"
              >
                Search
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="row form-group"
      >
        <div
          class="col-5"
        >
          <div
            class="col-12"
          >
            <label
              class="fw-bold"
              for="session-dropdown"
            >
              Feedback Session Name (Optional)
            </label>
          </div>
          <div
            class="col-12"
          >
            <select
              class="form-control form-select col-md-12 ng-untouched ng-pristine ng-valid"
              id="session-dropdown"
            >
              <option
                value=""
              />
            </select>
          </div>
        </div>
        <div
          class="row mt-md-1 ms-md-3"
        >
          <div
            class="col-12 form-check"
            style="margin-top: 30px;"
          >
            <label
              class="form-check-label"
            >
              <input
                class="form-check-input"
                id="show-actions"
                name="showActions"
                type="checkbox"
              />
               Show actions 
            </label>
            <label
              class="form-check-label"
              style="margin-left: 40px;"
            >
              <input
                class="form-check-input"
                id="show-inactions"
                name="showInactions"
                type="checkbox"
              />
               Show inactions 
            </label>
          </div>
        </div>
      </div>
    </div>
  </div><div
    id="logs-output"
  >
    <div>
      <div>
        <div
          class="card mb-3 alert-success-border"
        >
          <div
            class="card-header cursor-pointer text-break alert-success"
          >
             Feedback session 1 
            <div
              class="card-header-btn-toolbar"
            >
              <tm-panel-chevron>
                <div
                  class="chevron"
                >
                  <i
                    class="fas fa-chevron-up"
                  />
                </div>
              </tm-panel-chevron>
            </div>
          </div>
          <div>
            <div
              class="card-body"
            >
              <tm-sortable-table>
                <table
                  class="table table-bordered table-striped margin-bottom-20px"
                >
                  <thead>
                    <tr>
                      <th
                        aria-sort="none"
                        class="sortable-header"
                      >
                        <button>
                          <span
                            container="body"
                          >
                            Status
                          </span>
                          <span
                            aria-hidden="true"
                            class="fa-stack"
                          >
                            <i
                              class="fas fa-sort"
                            />
                          </span>
                        </button>
                      </th>
                      <th
                        aria-sort="ascending"
                        class="sortable-header"
                      >
                        <button>
                          <span
                            container="body"
                          >
                            Name
                          </span>
                          <span
                            aria-hidden="true"
                            class="fa-stack"
                          >
                            <i
                              class="fas fa-sort"
                            />
                            <i
                              class="fas fa-sort-up"
                            />
                          </span>
                        </button>
                      </th>
                      <th
                        aria-sort="none"
                        class="sortable-header"
                      >
                        <button>
                          <span
                            container="body"
                          >
                            Email
                          </span>
                          <span
                            aria-hidden="true"
                            class="fa-stack"
                          >
                            <i
                              class="fas fa-sort"
                            />
                          </span>
                        </button>
                      </th>
                      <th
                        aria-sort="none"
                        class="sortable-header"
                      >
                        <button>
                          <span
                            container="body"
                          >
                            Section
                          </span>
                          <span
                            aria-hidden="true"
                            class="fa-stack"
                          >
                            <i
                              class="fas fa-sort"
                            />
                          </span>
                        </button>
                      </th>
                      <th
                        aria-sort="none"
                        class="sortable-header"
                      >
                        <button>
                          <span
                            container="body"
                          >
                            Team
                          </span>
                          <span
                            aria-hidden="true"
                            class="fa-stack"
                          >
                            <i
                              class="fas fa-sort"
                            />
                          </span>
                        </button>
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td>
                        15 January 2021
                      </td>
                      <td>
                        Doe John
                      </td>
                      <td>
                        Viewed the submission page
                      </td>
                      <td>
                        doejohn@email.com
                      </td>
                      <td>
                        section 1
                      </td>
                      <td>
                        team 1
                      </td>
                    </tr>
                  </tbody>
                </table>
              </tm-sortable-table>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="card mb-3 alert-failure-border"
        >
          <div
            class="card-header cursor-pointer text-break alert-failure"
          >
             Feedback session 2 
            <div
              class="card-header-btn-toolbar"
            >
              <tm-panel-chevron>
                <div
                  class="chevron"
                >
                  <i
                    class="fas fa-chevron-up"
                  />
                </div>
              </tm-panel-chevron>
            </div>
          </div>
          <div>
            <div
              class="no-activity-body"
            >
              <i>
                No activity for this feedback session in selected search period
              </i>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</tm-instructor-student-activity-logs>
`;
